# XS-Mi-n-B-c-Intelligence

./: README.md
backend/: README.md  pyproject.toml
backend/app/: analytics.py  config.py  crud.py  database.py  ingestion.py  main.py  models.py  schemas.py
backend/app/backtest/: __init__.py  engine.py  plugins.py  strategies.py  types.py
backend/tests/: conftest.py  test_api.py  test_ingestion.py
backend/xsmb_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: xsmb.sqlite3
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  router.tsx  types.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AlgorithmSelector.tsx  ErrorState.tsx  Header.tsx  IngestionPanel.tsx  LoadingState.tsx  NumberFrequencyList.tsx  PredictionPanel.tsx  ResultsBoard.tsx  SummaryCards.tsx  TailByPrizePanel.tsx  TailHeatmap.tsx
frontend/src/hooks/: useAsync.ts
frontend/src/pages/: BacktestPro.test.tsx  BacktestPro.tsx
frontend/src/styles/: global.css
frontend/src/utils/: format.ts
